[gd_scene load_steps=29 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/player_stateMachine.gd" type="Script" id=2]
[ext_resource path="res://scenes/Camera.gd" type="Script" id=3]
[ext_resource path="res://assets/World Enviroments/overworld.tres" type="Environment" id=4]
[ext_resource path="res://assets/Player/Eye.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Player/Fabric025_1K_Normal.jpg" type="Texture" id=6]
[ext_resource path="res://assets/Player/Fabric025_1K_Color.jpg" type="Texture" id=7]
[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://bfxr_sounds/Jump.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/song18.ogg" type="AudioStream" id=10]

[sub_resource type="CapsuleShape" id=1]
radius = 1.00017
height = 0.75523

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.988235, 0.858824, 0, 1 )
albedo_texture = ExtResource( 7 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 6 )
uv1_triplanar = true

[sub_resource type="CapsuleMesh" id=4]
radius = 0.25

[sub_resource type="SphereMesh" id=5]
radius = 0.2
height = 0.15
is_hemisphere = true

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=7]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton/Head/left_leg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skeleton/Head/right_leg:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head/left_leg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 40, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton/Head/right_leg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -40, -8.15223e-21, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head/mouth:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -1.66287e-14, 0.805184, 0.358233 ), Vector3( -1.24069e-14, 0.777517, 0.347055 ) ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head/left_leg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 30, 0, 0 ), Vector3( -30, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton/Head/right_leg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -30, 0, 0 ), Vector3( 30, 0, 0 ) ]
}

[sub_resource type="AnimationNodeAdd2" id=11]

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "walk"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "sleep"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle"

[sub_resource type="AnimationNodeTimeScale" id=16]

[sub_resource type="AnimationNodeTransition" id=17]
input_count = 3
xfade_time = 0.25
input_0/name = "state 0"
input_0/auto_advance = false
input_1/name = "state 1"
input_1/auto_advance = false
input_2/name = "state 2"
input_2/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=18]
graph_offset = Vector2( 0, 66.6667 )
nodes/Add2/node = SubResource( 11 )
nodes/Add2/position = Vector2( 586.667, 160 )
nodes/Animation/node = SubResource( 15 )
nodes/Animation/position = Vector2( 53.3333, -106.667 )
"nodes/Animation 2/node" = SubResource( 12 )
"nodes/Animation 2/position" = Vector2( -106.667, 133.333 )
"nodes/Animation 3/node" = SubResource( 13 )
"nodes/Animation 3/position" = Vector2( -106.667, 266.667 )
"nodes/Animation 4/node" = SubResource( 14 )
"nodes/Animation 4/position" = Vector2( 320, 346.667 )
nodes/TimeScale/node = SubResource( 16 )
nodes/TimeScale/position = Vector2( 80, 133.333 )
nodes/anim_state/node = SubResource( 17 )
nodes/anim_state/position = Vector2( 320, 106.667 )
nodes/output/position = Vector2( 906.667, 186.667 )
node_connections = [ "output", 0, "Add2", "Add2", 0, "anim_state", "Add2", 1, "Animation 4", "anim_state", 0, "Animation", "anim_state", 1, "TimeScale", "anim_state", 2, "Animation 3", "TimeScale", 0, "Animation 2" ]

[node name="Player" type="KinematicBody"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="Menu" parent="." instance=ExtResource( 8 )]

[node name="player_stateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.65757, 0 )
shape = SubResource( 1 )

[node name="cam_pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960535, 0 )

[node name="point" type="Spatial" parent="cam_pivot"]
transform = Transform( -1, 2.08986e-13, -3.25842e-07, -7.85136e-08, 0.970536, 0.240957, 3.16241e-07, 0.240957, -0.970536, 0, 6.73979, -10.5506 )

[node name="Camera" type="Camera" parent="cam_pivot"]
transform = Transform( -1, 2.08888e-13, -3.25842e-07, -7.85136e-08, 0.970536, 0.240957, 3.16241e-07, 0.240957, -0.970536, -6.00682e-06, 11.1818, -28.4422 )
current = true
far = 200.0
script = ExtResource( 3 )

[node name="aux_pivot" type="Spatial" parent="cam_pivot/Camera"]

[node name="Skeleton" type="Spatial" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="too lazy to model mesh" type="Node" parent="Skeleton"]

[node name="Head" type="MeshInstance" parent="Skeleton"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="right_leg" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 1 )
mesh = SubResource( 4 )
material/0 = SubResource( 3 )

[node name="left_leg" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 1 )
mesh = SubResource( 4 )
material/0 = SubResource( 3 )

[node name="Eye" parent="Skeleton/Head" instance=ExtResource( 5 )]
transform = Transform( 0.965926, -5.55139e-09, 0.258819, -0.258819, -4.2167e-08, 0.965926, 5.55139e-09, -1, -4.2167e-08, 0.3, 0.95, -0.2 )

[node name="Eye2" parent="Skeleton/Head" instance=ExtResource( 5 )]
transform = Transform( 0.965926, 5.55139e-09, -0.258819, 0.258819, -4.2167e-08, 0.965926, -5.55139e-09, -1, -4.2167e-08, -0.3, 0.95, -0.2 )

[node name="mouth" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 1, -9.08867e-17, -3.49959e-15, 0, 0.927184, -0.374607, 1.42283e-21, 0.374607, 0.927184, -1.2826e-14, 0.780263, 0.348165 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Timers" type="Node" parent="."]

[node name="camera_timer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="WE" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 7 )
anims/jump = SubResource( 8 )
anims/sleep = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Add2/add_amount = 1.0
parameters/TimeScale/scale = 3.0
parameters/anim_state/current = 0

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="timeout" from="Timers/camera_timer" to="." method="_on_camera_timer_timeout"]
